# Chesslib

./: .gitignore  CMakeLists.txt  README.md  debugpos.txt  main.cpp
moveout/: test_attack_tables.cpp  test_board.h  test_move_generator.cpp
moveout/core2/: attack_tables_handler.cpp  chess_board.cpp  chess_board.h  global_utils.cpp  move_generator.cpp  move_generator.h
moveout/core3/: chesslib_board.h  chesslib_boardinfo.h  chesslib_callback.h  chesslib_def.h  chesslib_fenreader.h  chesslib_generate_metadata.h  chesslib_movegen.h  chesslib_scenarios.h  compile_flags  movegen_interface.h
python/: main.py
python/configs/: generalconfig.py  network_config.py  sv_hyperparams.py
python/coresystem/: action_policy_translation_dirty.py  action_space.py  actor_critic_net.py  agent.py  coresys.py  data_preprocessor.py  history.py  impl.py  model_ac_v1.py  network_capabilities.py  network_factory_tools.py  network_interface.py  output_classifier.py  policy_index.py  state_representation.py  training_methods.py  training_nexus.py  worker.py
python/environment/: db_importer.py  pgn_import_parse.py  supervised_env.py
python/evaluator_tools/: network_evaluator.py
src/: CMakeLists.txt
src/blowfish/: CMakeLists.txt  bmgen_randselect.cpp  bmgen_randselect.h  bmovegen.cpp  bmovegen.h  chessboard.h  chessboard_extractor.cpp  chessboard_extractor.h  chessboard_generator.cpp  chessboard_generator.h  chessboard_traverser.cpp  chessboard_traverser.h  defs.h  dubious.h  mgdefs.h  move_generator.cpp  move_generator.h  perft_divider.cpp  perft_divider.h  perft_divider_autotraverse.cpp  perft_divider_autotraverse.h  perft_mg_thread.cpp  perft_mg_thread.h  perft_mgfac.cpp  perft_mgfac.h  position_meta_data.cpp  position_meta_data.h  wmgen_randselect.cpp  wmgen_randselect.h  wmovegen.cpp  wmovegen.h
src/chess_interface/: CMakeLists.txt  movegen_interface.cpp  movegen_interface.h
src/core2/: attack_tables.cpp  attack_tables.h  attack_tables_handler.cpp  attack_tables_handler.h  chess_board.cpp  chess_board.h  global_utils.cpp  move_generator.cpp  move_generator.h
src/mcts_new/: CMakeLists.txt  mcts_defines.cpp  mcts_defines.h  mcts_evaluationtool.cpp  mcts_evaluationtool.h  mcts_jobqueue.h  mcts_node_expander.cpp  mcts_node_expander.h  mcts_nodegraph.cpp  mcts_nodegraph.h  mcts_nodeinserter.cpp  mcts_nodeinserter.h  mcts_nodemodel.cpp  mcts_nodemodel.h  mcts_nodetree.cpp  mcts_nodetree.h  mcts_simulation_env.cpp  mcts_simulation_env.h  node_simple.cpp  node_simple.h
src/monte_carlo/: CMakeLists.txt  config.h  mc_backprop.h  mc_bmgenrollout.cpp  mc_bmgenrollout.h  mc_config.h  mc_defs.h  mc_expansion.h  mc_functions.h  mc_mainthread.cpp  mc_mainthread.h  mc_node.cpp  mc_node.h  mc_node_structure.cpp  mc_node_structure.h  mc_nodesearch.h  mc_simulation_thread.h  mc_simulator.cpp  mc_simulator.h  mc_thread_factory.h  mc_wmgenrollout.cpp  mc_wmgenrollout.h  mcts.h
src/network/: CMakeLists.txt  frozen_nodegraph.cpp  frozen_nodegraph.h  history.h  network_manager.cpp  network_manager.h  nodegraph_cache.cpp  nodegraph_cache.h  nodegraph_manager.cpp  nodegraph_manager.h  policy_index.h  v0input_parser.cpp  v0input_parser.h  v0model.cpp  v0model.h
src/tree_simple/: CMakeLists.txt  node_simple.cpp  node_simple.h
tests/: CMakeLists.txt  test_attack_tables.h  test_black_mgen.h  test_blowfish_main.cpp  test_board.cpp  test_board.h  test_chessboard_fen.cpp  test_chesslib_main.cpp  test_move_generator.h  test_perft_basic.cpp  test_perft_complex.cpp  test_perft_full.cpp  test_perft_fullsuite.cpp  test_perft_medium.cpp  test_perft_staticpositions.cpp  test_positions.cpp  test_zobrist.cpp  utils.h
